# noteDDD

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.app  Dockerfile.migrations  README.md  docker-compose.yml  lefthook.yml
app/: Cargo.toml
common/: Cargo.toml
infra/: Cargo.toml
infra/src/: lib.rs
infra/src/auth/: authenticator.rs  mod.rs  pass_hasher.rs  pass_service.rs  token_adapter.rs
infra/src/db/: mod.rs
infra/src/db/auth_token/: create_access_token.rs  create_refresh_token.rs  delete_token_pair.rs  get_access_token.rs  get_refresh_token.rs  get_user_tokens.rs  mod.rs
infra/src/db/note/: create_note.rs  delete_note.rs  get_note.rs  get_note_count.rs  get_notes.rs  mod.rs  update_note.rs
infra/src/db/user/: create_user.rs  delete_user.rs  get_user.rs  get_user_count.rs  get_user_pass_hash.rs  get_users.rs  mod.rs  update_user.rs
infra/src/models/: mod.rs  note.rs  token.rs  user.rs
infra/src/repos/: auth_token.rs  mod.rs  note.rs  user.rs
infra/src/tx/: mod.rs
infra/src/tx/ctx/: mod.rs
main/: Cargo.toml
main/src/: main.rs  utils.rs
main/src/bootstrap/: mod.rs
pres/: Cargo.toml
pres/src/: lib.rs  utils.rs
pres/src/auth/: extractors.rs  mod.rs
pres/src/dtos/: auth_token.rs  mod.rs  note.rs  user.rs
pres/src/http/: mod.rs
pres/src/http/handlers/: mod.rs
pres/src/http/handlers/auth/: change_pass.rs  login.rs  mod.rs  refresh.rs
pres/src/http/handlers/notes/: create_note.rs  delete_note.rs  get_note.rs  get_notes.rs  mod.rs  update_note.rs
pres/src/http/handlers/users/: delete_self_user.rs  get_self_user.rs  mod.rs  register_user.rs  update_self_user.rs
pres/src/types/: error.rs  http.rs  mod.rs  params.rs
(+65 files in other folders)
