[package]
name = "note-ddd-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "NoteDDD"
path = "src/main.rs"

[dependencies]
app = { path = "../app" }
common = { path = "../common" }
pres = { path = "../pres" }
infra = { path = "../infra" }
dotenv = "0.15.0"
env_logger = "0.11.8"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
