[package]
name = "pres"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
common = { path = "../common" }
dmn = { path = "../dmn" }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
serde = "1.0.219"
serde_json = "1.0.140"
utoipa = { version = "5.4.0", features = ["axum_extras", "preserve_order", "preserve_path_order", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "debug-embed"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
tower = "*"
tower-http = { version = "*", features = ["normalize-path"] }
